[package]
name = "estimate_ml_fee"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.12.0"
structopt = "0.3.21"
env_logger = "0.8.2"
chrono = "0.4"
log = "0.4.13"
bitcoin-fee-model = { git="https://github.com/bitcoindevkit/bitcoin-fee-model", rev="189ab07a9aef6fa06397ab34010d8820c1396c00"}